--- a/SentiPlaces/css/styles.css
+++ b/SentiPlaces/css/styles.css
@@ -8,13 +8,15 @@ license: MIT
 author: bootply.com
 */
 
-
 html,body{
   	height:100%;
+	min-width: 100%;
+	min-height: 100%;
 }
 
 body{
   	padding-top:50px; /*padding for navbar*/
+	font-family: verdana, sans-serif;
 }
 
 .navbar-custom .icon-bar {
@@ -56,9 +58,18 @@ body{
 #map-canvas {
 	width:33.3333%;
     height:calc(100% - 0);
+	max-width:200px;
+    max-height:150px;
+    width: auto;
+    height: auto;
     position:absolute;
     right:16px;
     top:50px;
     bottom:0;
     overflow:hidden;
+}
+
+#googleMap {
+	width:auto;
+    height:780px;
 }
