--- a/SentiPlaces/css/styles.css
+++ b/SentiPlaces/css/styles.css
@@ -70,10 +70,21 @@ body{
 }
 
 #googleMap {
-	width:auto;
+	width:100%;
     height:780px;
+	max-width = 700px;
 }
 
 #ex1Slider .slider-selection {
    	background: #BABABA;
+}
+
+div#loading{
+	background: #000;
+	opacity: 0.7;
+	position: absolute;
+    z-index:10;
+	top: 98px;
+	width: 98%;
+	height: 783px;
 }
